--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <i class="bi bi-pencil-square"></i>
       <div class="timeline-text">
         <h4>Pendaftaran Gelombang 1</h4>
-        <p>10 – 16 Januari 2025</p>
+        <p>10 – 16 Januari 2026</p>
       </div>
     </div>
 
@@ -146,9 +146,8 @@
       <i class="bi bi-people"></i>
       <div class="timeline-text">
         <h4>Wawancara Gelombang 1</h4>
-        <p>17 Januari 2025</p>
+        <p>17 Januari 2026</p>
         <p>Via : Online (Google Meet / Video Call WhatsApp)</p>
-        <p>Waktu: 19.00 WIB</p>
       </div>
     </div>
 
@@ -157,7 +156,7 @@
       <i class="bi bi-pencil-square"></i>
       <div class="timeline-text">
         <h4>Pendaftaran Gelombang 2</h4>
-        <p>19 – 29 Januari 2025</p>
+        <p>19 – 29 Januari 2026</p>
       </div>
     </div>
 
@@ -165,10 +164,17 @@
       <i class="bi bi-people"></i>
       <div class="timeline-text">
         <h4>Wawancara Gelombang 2</h4>
-        <p>30 Januari 2025</p>
+        <p>30 Januari 2026</p>
         <p>Via: Online (Google Meet / Video Call WhatsApp)</p>
-        <p>Waktu: 19.00 WIB</p>
       </div>
+      <!-- batas pendaftaran -->
+    <div class="timeline-item reveal">
+      <i class="bi bi-pencil-square"></i>
+      <div class="timeline-text">
+        <h4> Batas Pendaftaran</h4>
+        <p>29 Januari 2026</p>
+      </div>
+    </div>
     </div>
 
   </div>
