--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
         <p>30 Januari 2026</p>
         <p>Via: Online (Google Meet / Video Call WhatsApp)</p>
       </div>
+    </div>
       <!-- batas pendaftaran -->
     <div class="timeline-item reveal">
       <i class="bi bi-pencil-square"></i>
@@ -174,6 +175,15 @@
         <h4> Batas Pendaftaran</h4>
         <p>29 Januari 2026</p>
       </div>
+    </div>
+    <!-- Pengumuman (nanti diupdate) -->
+  <div class="timeline-item">
+    <i class="bi bi-award"></i>
+    <div class="timeline-text">
+      <h4>Pengumuman</h4>
+      <p>
+        Tanggal akan diumumkan menyusul
+      </p>
     </div>
     </div>
 
