--- a/index.html
+++ b/index.html
@@ -133,41 +133,89 @@
 
   <div class="timeline-container">
 
-    <!-- Gelombang 1 -->
-    <div class="timeline-item reveal">
-      <i class="bi bi-pencil-square"></i>
-      <div class="timeline-text">
-        <h4>Pendaftaran Gelombang 1</h4>
-        <p>10 – 16 Januari 2026</p>
-      </div>
-    </div>
+<!-- Gelombang 1 -->
+<div class="timeline-card reveal">
+  <h3 class="gelombang-title">Gelombang 1</h3>
 
-    <div class="timeline-item reveal">
-      <i class="bi bi-people"></i>
-      <div class="timeline-text">
-        <h4>Wawancara Gelombang 1</h4>
-        <p>17 Januari 2026</p>
-        <p>Via : Online (Google Meet / Video Call WhatsApp)</p>
-      </div>
+  <!-- Pendaftaran -->
+  <div class="timeline-item">
+    <i class="bi bi-pencil-square"></i>
+    <div class="timeline-text">
+      <h4>Pendaftaran</h4>
+      <p>
+        10 – 16 Januari 2025 <br>
+        <span class="deadline">Batas akhir: 16 Jan 2025, 23:59 WIB</span>
+      </p>
     </div>
+  </div>
 
-    <!-- Gelombang 2 -->
-    <div class="timeline-item reveal">
-      <i class="bi bi-pencil-square"></i>
-      <div class="timeline-text">
-        <h4>Pendaftaran Gelombang 2</h4>
-        <p>19 – 29 Januari 2026</p>
-      </div>
+  <!-- Wawancara -->
+  <div class="timeline-item">
+    <i class="bi bi-people"></i>
+    <div class="timeline-text">
+      <h4>Wawancara</h4>
+      <p>
+        17 Januari 2025 <br>
+        Metode: Online (Google Meet / WhatsApp) <br>
+        Waktu: 19:00 WIB
+      </p>
     </div>
+  </div>
 
-    <div class="timeline-item reveal">
-      <i class="bi bi-people"></i>
-      <div class="timeline-text">
-        <h4>Wawancara Gelombang 2</h4>
-        <p>30 Januari 2026</p>
-        <p>Via: Online (Google Meet / Video Call WhatsApp)</p>
-      </div>
+  <!-- Pengumuman (nanti diupdate) -->
+  <div class="timeline-item">
+    <i class="bi bi-award"></i>
+    <div class="timeline-text">
+      <h4>Pengumuman</h4>
+      <p>
+        Tanggal akan diumumkan menyusul
+      </p>
     </div>
+  </div>
+</div>
+
+
+  <!-- Gelombang 2 -->
+<div class="timeline-card reveal">
+  <h3 class="gelombang-title">Gelombang 2</h3>
+
+  <!-- Pendaftaran -->
+  <div class="timeline-item">
+    <i class="bi bi-pencil-square"></i>
+    <div class="timeline-text">
+      <h4>Pendaftaran</h4>
+      <p>
+        19 – 29 Januari 2025 <br>
+        <span class="deadline">Batas akhir: 29 Jan 2025, 23:59 WIB</span>
+      </p>
+    </div>
+  </div>
+
+  <!-- Wawancara -->
+  <div class="timeline-item">
+    <i class="bi bi-people"></i>
+    <div class="timeline-text">
+      <h4>Wawancara</h4>
+      <p>
+        30 Januari 2025 <br>
+        Metode: Online (Google Meet / WhatsApp) <br>
+        Waktu: 19:00 WIB
+      </p>
+    </div>
+  </div>
+
+  <!-- Pengumuman (nanti diupdate) -->
+  <div class="timeline-item">
+    <i class="bi bi-award"></i>
+    <div class="timeline-text">
+      <h4>Pengumuman</h4>
+      <p>
+        Tanggal akan diumumkan menyusul
+      </p>
+    </div>
+  </div>
+</div>
+
       <!-- batas pendaftaran -->
     <div class="timeline-item reveal">
       <i class="bi bi-pencil-square"></i>
