--- a/index.html
+++ b/index.html
@@ -131,27 +131,36 @@
 <section id="timeline" class="section light">
   <h2 class="section-title">Jadwal Open Recruitment</h2>
 
-  <div class="timeline-container">
+  <div class="timeline-wrapper">
 
     <!-- Gelombang 1 -->
-    <div class="timeline-card" onclick="toggleTimeline('gel1')">
-      <h3 class="gelombang-title">Gelombang 1</h3>
-      <div class="timeline-items" id="gel1">
-        <div class="timeline-item reveal">
+    <div class="timeline-card">
+      <h3 class="gelombang-title" onclick="toggleTimeline('gel1')">
+        Gelombang 1 <i class="bi bi-chevron-down"></i>
+      </h3>
+      <div class="timeline-container" id="gel1">
+        <div class="timeline-item">
           <i class="bi bi-pencil-square"></i>
           <div class="timeline-text">
             <h4>Pendaftaran</h4>
-            <p>10 – 16 Januari 2025 <br><span class="deadline">Batas akhir: 16 Jan 2025, 23:59 WIB</span></p>
+            <p>10 – 16 Januari 2025 <br>
+               <span class="deadline">Batas akhir: 16 Jan 2025, 23:59 WIB</span>
+            </p>
           </div>
         </div>
-        <div class="timeline-item reveal">
+
+        <div class="timeline-item">
           <i class="bi bi-people"></i>
           <div class="timeline-text">
             <h4>Wawancara</h4>
-            <p>17 Januari 2025 <br>Metode: Online (Google Meet / WhatsApp) <br>Waktu: 19:00 WIB</p>
+            <p>17 Januari 2025 <br>
+               Metode: Online (Google Meet / WhatsApp) <br>
+               Waktu: 19:00 WIB
+            </p>
           </div>
         </div>
-        <div class="timeline-item reveal">
+
+        <div class="timeline-item">
           <i class="bi bi-award"></i>
           <div class="timeline-text">
             <h4>Pengumuman</h4>
@@ -162,24 +171,33 @@
     </div>
 
     <!-- Gelombang 2 -->
-    <div class="timeline-card" onclick="toggleTimeline('gel2')">
-      <h3 class="gelombang-title">Gelombang 2</h3>
-      <div class="timeline-items" id="gel2">
-        <div class="timeline-item reveal">
+    <div class="timeline-card">
+      <h3 class="gelombang-title" onclick="toggleTimeline('gel2')">
+        Gelombang 2 <i class="bi bi-chevron-down"></i>
+      </h3>
+      <div class="timeline-container" id="gel2">
+        <div class="timeline-item">
           <i class="bi bi-pencil-square"></i>
           <div class="timeline-text">
             <h4>Pendaftaran</h4>
-            <p>19 – 29 Januari 2025 <br><span class="deadline">Batas akhir: 29 Jan 2025, 23:59 WIB</span></p>
+            <p>19 – 29 Januari 2025 <br>
+               <span class="deadline">Batas akhir: 29 Jan 2025, 23:59 WIB</span>
+            </p>
           </div>
         </div>
-        <div class="timeline-item reveal">
+
+        <div class="timeline-item">
           <i class="bi bi-people"></i>
           <div class="timeline-text">
             <h4>Wawancara</h4>
-            <p>30 Januari 2025 <br>Metode: Online (Google Meet / WhatsApp) <br>Waktu: 19:00 WIB</p>
+            <p>30 Januari 2025 <br>
+               Metode: Online (Google Meet / WhatsApp) <br>
+               Waktu: 19:00 WIB
+            </p>
           </div>
         </div>
-        <div class="timeline-item reveal">
+
+        <div class="timeline-item">
           <i class="bi bi-award"></i>
           <div class="timeline-text">
             <h4>Pengumuman</h4>
@@ -191,6 +209,8 @@
 
   </div>
 </section>
+<hr>
+
 
 <!-- ================= DAFTAR ================= -->
 <section id="daftar" class="section dark">
