--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <i class="bi bi-pencil-square"></i>
           <div class="timeline-text">
             <h4>Pendaftaran</h4>
-            <p>10 – 16 Januari 2025 <br>
+            <p>11 – 16 Januari 2026<br>
                <span class="deadline">Batas akhir: 16 Jan 2025, 23:59 WIB</span>
             </p>
           </div>
@@ -153,8 +153,8 @@
           <i class="bi bi-people"></i>
           <div class="timeline-text">
             <h4>Wawancara</h4>
-            <p>17 Januari 2025 <br>
-               Metode: Online (Google Meet / WhatsApp) <br>
+            <p>17 Januari 2026<br>
+               Metode: Online (Google Meet / WhatsApp)<br>
                Waktu: 19:00 WIB
             </p>
           </div>
@@ -164,7 +164,7 @@
           <i class="bi bi-award"></i>
           <div class="timeline-text">
             <h4>Pengumuman</h4>
-            <p>Tanggal akan diumumkan menyusul</p>
+            <p>18 Januari 2026</p>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
           <i class="bi bi-pencil-square"></i>
           <div class="timeline-text">
             <h4>Pendaftaran</h4>
-            <p>19 – 29 Januari 2025 <br>
+            <p>19 – 29 Januari 2025<br>
                <span class="deadline">Batas akhir: 29 Jan 2025, 23:59 WIB</span>
             </p>
           </div>
@@ -190,8 +190,8 @@
           <i class="bi bi-people"></i>
           <div class="timeline-text">
             <h4>Wawancara</h4>
-            <p>30 Januari 2025 <br>
-               Metode: Online (Google Meet / WhatsApp) <br>
+            <p>30 Januari 2025<br>
+               Metode: Online (Google Meet / WhatsApp)<br>
                Waktu: 19:00 WIB
             </p>
           </div>
@@ -209,7 +209,6 @@
 
   </div>
 </section>
-<hr>
 
 
 <!-- ================= DAFTAR ================= -->
